--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,34 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# Virtual Environments
-.venv/
+*.so
+.Python
+env/
 venv/
 ENV/
+env.bak/
+venv.bak/
 
-# IDE settings
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
 
-# Data directory
+# Data files
 data/
+*.csv
+*.xls
+*.xlsx
+*.json
 
-# Ignore all txt files (if necessary)
-# *.txt
-
-
+# Environment variables
 .env
 
-/data/
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
